19 June 2002: [v0.1.0]
	Created.  Includes drtsafe, drtsafevf.
24 February 2006: [v0.1.1]
	not sure why I was using for loops in install-src; now commented out.
	add install-all rule. run ranlib on lib after installation (for 
	Darwin ld). add include files to avoid warnings in gcc4.0.