@@ -4,3 +4,6 @@
 	not sure why I was using for loops in install-src; now commented out.
 	add install-all rule. run ranlib on lib after installation (for 
 	Darwin ld). add include files to avoid warnings in gcc4.0.
+22 May 2006: [v0.1.2]
+	Use HOME to set PREFIX. Unable to use UNAME to set OS, yet; added
+	to TODO.
